--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,3 +1,31 @@
 body {
     background-color: beige;
 };
+
+section {
+  text-align: center;
+  margin: 50px;
+}
+
+button {
+  width: 125px;
+  height: 45px;
+  margin: 10px;
+  font-size: 25px;
+}
+
+input {
+  width: 450px;
+  height: 50px;
+  margin: 10px;
+  font-size: 25px;
+}
+
+ul {
+  list-style: none;
+  font-size: 30px;
+}
+
+li {
+  margin: 15px;
+}
